# library_database

./: .env  .gitignore  Makefile  README.md  delete.sql  docker-compose.yaml  examples.sql  pyproject.toml
docs/: ERD-library_db.drawio
init_data/: init.sql
